--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>House Blueprint</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="house-container">
+        <div id="roof"></div>
+        <div id="walls">
+            <div id="door"></div>
+            <div id="window1"></div>
+            <div id="window2"></div>
+            <div id="light-switch">
+                <button id="light-button">Turn On Light</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
